# XiaoTuMujocoNote

./: .gitignore  README.md
复合刚体/: CMakeLists.txt  box_arm.xml  test.cpp
安装试用/: CMakeLists.txt  hello.xml  test.cpp
正运动学/: CMakeLists.txt  box_arm.xml  test.cpp
编程套路/: CMakeLists.txt  test.cpp  test_with_gui.cpp
解析XML/: CMakeLists.txt
解析XML/src/: load_xml.cpp  tinyxml2.cpp
解析XML/xml/: humanoid.xml
